Extend available memory for test tasks