@@ -10,3 +10,11 @@ plugins {
     alias(libs.plugins.jetbrainsCompose) apply false
     alias(libs.plugins.compose.compiler) apply false
 }
+
+tasks {
+    withType<Test> {
+        minHeapSize = "512m"
+        maxHeapSize = "2048m"
+        jvmArgs = listOf("-XX:MaxPermSize=512m")
+    }
+}
